fix: update MunicipalitySearch focus box-shadow color for improved visibility

--- a/frontend/src/styles/MunicipalitySearch.module.css
+++ b/frontend/src/styles/MunicipalitySearch.module.css
@@ -18,7 +18,7 @@
 
 
 .MunicipalitySearch:focus {
-    box-shadow: 0 0 0 .15rem rgba(132, 124, 61, 0.4) !important;
+    box-shadow: 0 0 0 .15rem rgba(77, 103, 101, 0.45) !important;
     border-color: rgba(132, 124, 61, 0.4) !important;
 }
 
